@@ -368,6 +368,7 @@ XS_EUPXS({{cpp.function.name}}) {
 {%comment%}/standard init{%endcomment%}
         {% case function %}
             {% when 'new' %}
+            {%assign class.widget_type = definition.returns | split:' ' | first %}
         CTX * ctx;
         Newx(ctx, 1, CTX);
 
@@ -415,8 +416,8 @@ XS_EUPXS({{cpp.function.name}}) {
             {% if definition.code %}
                 { {{definition.code}} }
             {% else %}
-                {% if definition.returns and definition.returns != 'void' %}RETVAL = {%endif%}
-                {%if is_method%}(({{class.package | replace:'::','_'}} *)self->cp_ctx)->{{ function }}{%
+                {% if definition.returns and definition.returns != 'void' %}RETVAL = {%endif%} // {{ class.package }} | {{ class.widget_type }}
+                {%if is_method%}(({%if class.widget_type%}{{class.widget_type}}{%else%}{{class.package | replace:'::','_'}}{%endif%} *)self->cp_ctx)->{{ function }}{%
                 else        %}{{ function }}{%
                 endif%}( {%
             if definition.c_args %}{{definition.c_args}}{%
